deploys/stagings/ingress-stg-cilist-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-stg-cilist-fe
  namespace: staging
  annotations:
   nginx.ingress.kubernetes.io/configuration-snippet: |
     more_set_headers "server: hide";
     more_set_headers "X-Powered-By: cilsy";
     more_set_headers "X-Content-Type-Options: nosniff";
     more_set_headers "X-Frame-Options: SAMEORIGIN";
     more_set_headers "X-Xss-Protection: 1; mode=block";
   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/proxy-body-size: 8m
   nginx.ingress.kubernetes.io/rewrite-target: /
   nginx.ingress.kubernetes.io/ssl-redirect: "true"
   nginx.ingress.kubernetes.io/cors-allow-origin: '*'
   nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
   nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
   nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: stg-cilist.raziffk.my.id
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: stg-cilist-fe
            port: 
              number: 80
  tls:
    - hosts:
        - stg-cilist.raziffk.my.id
      secretName: wildcard-cilist
